# kids-box

./: Dockerfile  justfile  pyproject.toml  spotify.py
src/kids_box/: api.py  app.py  spotify.py
templates/: devices.html  index.html
