[project]
name = "kids_box"
version = "0.1.0"
description = "A lot of experiments in creating a kds_box"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
kids_box = "kids_box.app:run"
